# CSMSG

./: .gitignore  CMakeLists.txt  LICENCE  README.md  xmake.lua
.github/workflows/: linux.yml  window.yml
example/: main.cpp
include/: AES.hpp  Curve.hpp  CurveX25519.hpp  Edward.hpp  Field.hpp  KDF.hpp  Keys.hpp  Message.hpp  Ratchet.hpp  SHA.hpp  SHA512.hpp  State.hpp  Utility.hpp  Utility.inl  X3DH.hpp  XEdDSA.hpp
src/: AES.cpp  Curve.cpp  CurveX25519.cpp  Edward.cpp  Field.cpp  KDF.cpp  Keys.cpp  Message.cpp  Ratchet.cpp  SHA.cpp  SHA512.cpp  State.cpp  Utility.cpp  X3DH.cpp  XEdDSA.cpp  main.cpp
tests/: AES.cpp  Curve.cpp  CurveX25519.cpp  Edward.cpp  Field.cpp  Keys.cpp  SHA.cpp  SHA512.cpp  XEdDSA.cpp
